<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/margin_bottom">

            <Button
                android:id="@+id/search_button"
                android:layout_width="match_parent"
                android:layout_height="@dimen/search_button_height"
                android:layout_marginTop="@dimen/margin_top"
                android:text="@string/text_search"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <!-- Title -->
            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top"
                android:text="@string/text_title"
                android:textSize="@dimen/txt_font_size"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/search_button" />

            <TextView
                android:id="@+id/search_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_txt_item_start"
                android:layout_marginTop="@dimen/margin_txt_top"
                android:text="@string/text_title"
                android:textSize="@dimen/txt_subitem_font_size"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/title" />

            <!-- Tagline -->
            <TextView
                android:id="@+id/tagline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top"
                android:text="@string/text_tagline"
                android:textSize="@dimen/txt_font_size"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/search_title" />

            <TextView
                android:id="@+id/search_tagline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_txt_item_start"
                android:layout_marginTop="@dimen/margin_txt_top"
                android:text="@string/text_tagline"
                android:textSize="@dimen/txt_subitem_font_size"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tagline" />

            <!-- overview -->
            <TextView
                android:id="@+id/overview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top"
                android:text="@string/text_overview"
                android:textSize="@dimen/txt_font_size"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/search_tagline" />

            <TextView
                android:id="@+id/search_overview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_txt_item_start"
                android:layout_marginTop="@dimen/margin_txt_top"
                android:text="@string/text_overview"
                android:textSize="@dimen/txt_subitem_font_size"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/overview" />

            <!-- genre -->
            <TextView
                android:id="@+id/genre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top"
                android:text="@string/text_genre"
                android:textSize="@dimen/txt_font_size"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/search_overview" />

            <TextView
                android:id="@+id/search_genre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_txt_item_start"
                android:layout_marginTop="@dimen/margin_txt_top"
                android:text="@string/text_genre"
                android:textSize="@dimen/txt_subitem_font_size"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/genre" />

            <!-- language -->
            <TextView
                android:id="@+id/language"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top"
                android:text="@string/text_language"
                android:textSize="@dimen/txt_font_size"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/search_genre" />

            <TextView
                android:id="@+id/search_language"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_txt_item_start"
                android:layout_marginTop="@dimen/margin_txt_top"
                android:text="@string/text_language"
                android:textSize="@dimen/txt_subitem_font_size"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/language" />

            <!-- release -->
            <TextView
                android:id="@+id/release"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top"
                android:text="@string/text_release"
                android:textSize="@dimen/txt_font_size"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/search_language" />

            <TextView
                android:id="@+id/search_release"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_txt_item_start"
                android:layout_marginTop="@dimen/margin_txt_top"
                android:text="@string/text_release"
                android:textSize="@dimen/txt_subitem_font_size"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/release" />

            <!-- voteAverage -->
            <TextView
                android:id="@+id/voteAverage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top"
                android:text="@string/text_voteAverage"
                android:textSize="@dimen/txt_font_size"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/search_release" />

            <TextView
                android:id="@+id/search_voteAverage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_txt_item_start"
                android:layout_marginTop="@dimen/margin_txt_top"
                android:text="@string/text_voteAverage"
                android:textSize="@dimen/txt_subitem_font_size"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/voteAverage" />

            <!-- voteCount -->
            <TextView
                android:id="@+id/voteCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top"
                android:text="@string/text_voteCount"
                android:textSize="@dimen/txt_font_size"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/search_voteAverage" />

            <TextView
                android:id="@+id/search_voteCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_txt_item_start"
                android:layout_marginTop="@dimen/margin_txt_top"
                android:text="@string/text_voteCount"
                android:textSize="@dimen/txt_subitem_font_size"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/voteCount" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</RelativeLayout>